<resources>
    <string name="app_name">Demo My Second App</string>
    <string name="welcome">Welcome To Android!</string>
    <string name="registration_form">Registration Form</string>
    <string name="welcome_to_adventure_learning_club">Welcome to Adventure Learning Club!</string>
    <string name="male">Male</string>
    <string name="phone">Phone</string>
    <string name="student_id">Student ID</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="e_mail">E-mail</string>
    <string name="school">School</string>
    <string name="login_page">Login Page</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">login</string>
    <string name="cancel">CANCEL</string>
</resources>